增加设备地图,增加媒体类型查看

--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
 <body>
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+  <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=wd4Mbk6njkwfNmmr60tP0SI7l3ngOmoo"></script>
 </body>
 </html>
